# cyst-models-dojo-cryton

./: .gitignore  README.md  pyproject.toml  scenario.py  setup.py
cyst_models/cryton/: cryton_action.py  cryton_utils.py  environment.py  environment_proxy_cryton.py  execute_command.py  exfiltrate_data.py  exploit_server.py  find_data.py  find_services.py  main.py  proxy.py  scan_network.py  session.py  update_routing.py  wait_for_session.py
cyst_models/cryton/actions/: __init__.py  action.py  execute_command.py  exfiltrate_data.py  exploit_server.py  find_data.py  find_services.py  scan_network.py  session.py  update_routing.py  wait_for_session.py
cyst_models/simulation/: main.py
scenarios/: db_fix.sh  demo.py  demo_2023.py  demo_2023_infrastructure.py  demo_2023_simulated.py  demo_2023_simulated_infrastructure.py  demo_firehole.py  demo_firehole_infrastructure.py  demo_infrastructure.py  fh-mysql.yml  fh-smb.yml  fh-vsftpd.yml  fh-wp.yml  phishing.py
tests/integration/: test_environment.py  test_environment_proxy_cryton.py
