[tool.poetry]
name = "cyst-models-dojo-cryton"
version = "0.6.0"
description = ""
authors = ["Martin Drasar <drasar@ics.muni.cz>"]
readme = "README.md"

packages = [
    { include = "cyst_models", from = "." }
]

[tool.poetry.dependencies]
    python = ">=3.11, <4.0.0"
    cyst-core = { git = "https://gitlab.com/ai-dojo-public/cyst-core.git", branch = "master" }
    netaddr = ">=0.9.0"
    importlib_metadata = ">=6.8.0"
    pyyaml = ">=6.0.1"
    requests = ">=2.32.2"

[build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."cyst.models"]
    cryton="cyst_models.cryton.main:behavioral_model_description"
    sim="cyst_models.simulation.main:behavioral_model_description"

[tool.poetry.plugins."cyst.services"]

[tool.poetry.plugins."cyst.metadata_providers"]

[tool.poetry.plugins."cyst.platforms"]
