[tool.poetry]
name = "cyst-models-dojo-cryton"
version = "0.6.0"
description = ""
authors = ["Martin Drasar <drasar@ics.muni.cz>"]
readme = "README.md"

packages = [
    { include = "cyst_models", from = "." }
]

[tool.poetry.dependencies]
    python = ">=3.11, <4.0.0"
    # Use CYST components' local paths and not remote git repositories if you also want to hack on them. Beware that you
    # will have to make this change in all other dependent projects that will be using the same dependency (this
    # typically happens with cyst-core).
    cyst-core = { git = "https://gitlab.com/ai-dojo-public/cyst-core.git", branch = "master" }
    # cyst-core = { path = "../cyst-core", develop = true }
    netaddr = ">=0.9.0"
    importlib_metadata = ">=6.8.0"
    pyyaml = ">=6.0.1"
    requests = ">=2.32.2"

[build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."cyst.models"]
    cryton="cyst_models.cryton.main:behavioral_model_description"
    sim="cyst_models.simulation.main:behavioral_model_description"

[tool.poetry.plugins."cyst.services"]

[tool.poetry.plugins."cyst.metadata_providers"]

[tool.poetry.plugins."cyst.platforms"]
